syntax = "proto3";

package dmx_controller;

import "proto/light_layer.proto";

message FixtureSequence {
  string name = 1;
  uint32 native_beats = 2;

  reserved 3 to 10;

  repeated LightLayer layers = 11;
}
